--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -70,7 +70,7 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Checkout private tools
+    - name: Checkout private tools maintained by kouhj
       uses: actions/checkout@v3
       with:
         repository: kouhj/kouhj_openwrt_packages
@@ -88,6 +88,7 @@ jobs:
       run: scripts/cisteps/build-openwrt/03-clean_up.sh
 
     # https://github.com/docker/setup-qemu-action
+    # install QEMU static binaries.
     - name: Set up QEMU
       id: buildx-qemy
       if: env.SKIP_TARGET == '0'
