--- a/user/x64/settings.ini
+++ b/user/x64/settings.ini
@@ -4,6 +4,8 @@
 # 在这里自定义你想使用的Builder名和默认Tag，这将被用作Docker Hub仓库的名字和Tag
 # 对于BUILDER_NAME，由于docker的限制，仅能使用小写字母、数字和分隔符（英文句号，下划线，横杠）
 # 对于BUILDER_TAG，能使用大小写字母、数字和分隔符
+OPT_DEBUG=1
+
 BUILDER_NAME="openwrt"
 BUILDER_TAG="latest"
 # Specify here the OpenWrt Repo URL and Branch
