--- a/user/default/sdk/feeds.conf
+++ b/user/default/sdk/feeds.conf
@@ -1,2 +1,2 @@
 # This file contains the extra feeds that will be appended to feeds.buildinfo by update_ib_sdk.sh
-src-link kouhj /home/builder/kouhj_src
+src-link kouhj file:/home/builder/kouhj_src
