Enable additional targets in workflow

--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -50,7 +50,7 @@ jobs:
       matrix:
         mode:
           - normal
-          - test
+        #  - test
         # ########### Add your target name below ###########
         # targets are located in the folder user/${TARGET_NAME}/
         target: [x64, ax6s, cr6609]
