--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -237,8 +237,9 @@ jobs:
       - name: Delete workflow runs
         uses: GitRML/delete-workflow-runs@main
         with:
-          retain_days: 1
+          retain_days: 3
           keep_minimum_runs: 3
+          token: ${{ secrets.GH_PAT }}
 
       - name: Remove old Releases
         uses: dev-drprasad/delete-older-releases@v0.1.0
