--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -201,6 +201,11 @@ jobs:
         if: steps.update.outputs.build_needed == 'yes' && env.SKIP_TARGET == '0' && !cancelled()
         run: scripts/cisteps/build-openwrt/14-organize_files.sh
 
+      - name: Upload firmware to transfer.sh
+        id: transfersh
+        if: steps.update.outputs.build_needed == 'yes' && job.status == 'success'
+        run: scripts/cisteps/build-openwrt/15-upload_to_transfer.sh
+
       - name: Upload firmware
         uses: actions/upload-artifact@master
         if: |
@@ -208,12 +213,8 @@ jobs:
           steps.update.outputs.build_needed == 'yes' && steps.organize.outputs.status == 'success' && !cancelled()
         with:
           name: OpenWrt_firmware_${{env.BUILD_TARGET}}_${{env.FILE_DATE}}
-          path: openwrt_firmware
-
-      - name: Upload firmware to transfer.sh
-        id: transfersh
-        if: steps.update.outputs.build_needed == 'yes' && job.status == 'success'
-        run: scripts/cisteps/build-openwrt/15-upload_to_transfer.sh
+          #path: openwrt_firmware
+          path: steps.transfersh.outputs.archive
 
       - name: Upload packages
         uses: actions/upload-artifact@master
