--- a/user/ax6s/settings.ini
+++ b/user/ax6s/settings.ini
@@ -15,5 +15,6 @@ REPO_BRANCH="master"
 
 
 # Base URL where to download the ImageBuilder and SDK
-OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/snapshots/targets/mediatek/mt7622'
+#OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/snapshots/targets/mediatek/mt7622'
+OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/releases/22.03.0-rc6/targets/mediatek/mt7622'
 #OPENWRT_DOWNLOAD_SITE_URL='https://mirrors.cloud.tencent.com/lede/snapshots/targets/mediatek/mt7622'
