--- a/user/x64/settings.ini
+++ b/user/x64/settings.ini
@@ -15,5 +15,6 @@ REPO_URL="https://github.com/openwrt/openwrt"
 
 
 # Base URL where to download the ImageBuilder and SDK
-OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/snapshots/targets/x86/64/'
+#OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/snapshots/targets/x86/64/'
 #OPENWRT_DOWNLOAD_SITE_URL='https://mirrors.cloud.tencent.com/lede/snapshots/targets/x86/64/'
+OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/releases/22.03.0-rc6/targets/x86/64/'
