--- a/user/x64/settings.ini
+++ b/user/x64/settings.ini
@@ -12,9 +12,13 @@ BUILDER_TAG="latest"
 REPO_BRANCH="master"
 REPO_URL="https://github.com/openwrt/openwrt"
 # REPO_BRANCH="openwrt-19.07"
+REPO_VERSION='22.03.4'
 
 
 # Base URL where to download the ImageBuilder and SDK
 #OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/snapshots/targets/x86/64/'
 #OPENWRT_DOWNLOAD_SITE_URL='https://mirrors.cloud.tencent.com/lede/snapshots/targets/x86/64/'
-OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/releases/22.03.4/targets/x86/64/'
+OPENWRT_DOWNLOAD_SITE_URL="https://downloads.openwrt.org/releases/${REPO_VERSION}/targets/x86/64/"
+
+# Base URL where to download the prebuilt packages
+OPENWRT_PACKAGES_URL="https://downloads.openwrt.org/releases/${REPO_VERSION}/packages/x86_64/"
