--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -103,6 +103,10 @@ jobs:
         id: buildx-qemu
         if: env.SKIP_TARGET == '0'
         uses: docker/setup-qemu-action@v3
+      
+      - name: Show status
+        run: echo "SKIP_TARGET=${SKIP_TARGET}/${{env.SKIP_TARGET}}, OPT_DEBUG=${OPT_DEBUG}/${{env.OPT_DEBUG}}"
+
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         id: buildx
