--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -33,7 +33,7 @@ on:
   #   types: [started]
 
 jobs:
-  build:
+  build-and-upload:
     runs-on: ubuntu-latest
     # For `github.event`'s structure, see: https://developer.github.com/v3/activity/events/types/
     # Do not modify the trigger methods here, customize them in the `on` section
@@ -217,35 +217,26 @@ jobs:
         if: env.BUILD_NEEDED == 'yes' && env.ORGANIZE_STATUS == 'success'
         run: scripts/cisteps/build-openwrt/15-generate_archive.sh
 
-      - name: Upload firmware
+      - name: Upload Artifacts
         id: upload
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@v4
         if: |
           env.SKIP_TARGET == '0' && env.OPT_PACKAGE_ONLY != '1' && 
-          env.BUILD_NEEDED && steps.organize.outputs.status == 'success' && !cancelled()
+          env.BUILD_NEEDED == 'yes' && env.ORGANIZE_STATUS == 'success' && !cancelled()
         with:
           name: OpenWrt_firmware_${{env.BUILD_TARGET}}_$(date +'%Y%m%d-%H%M')
-          #path: openwrt_firmware
           path: ${{ env.archive }}
 
-      - name: Generate release tag
-        id: tag
-        if: env.BUILD_NEEDED == 'yes' && job.status == 'success' && !cancelled()
-        run: |
-          echo "RELEASE_TAG=OpenWrt_firmware_${{env.BUILD_TARGET}}_$(date +"%Y%m%d-%H%M")" >> $GITHUB_ENV
-          touch release.txt
-          echo "🔗 Download firmware from (${{ steps.upload.outputs.artifact_url }})" >> release.txt
-          echo "SET_TAG_STATUS=success" >> $GITHUB_ENV
-
-      - name: Upload firmware to release
-        uses: softprops/action-gh-release@v1
-        if: env.BUILD_NEEDED == 'yes' && env.SET_TAG_STATUS == 'success' && !cancelled()
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create release
+        uses: actions/create-release@v1
+        if: |
+          env.SKIP_TARGET == '0' && env.OPT_PACKAGE_ONLY != '1' && 
+          env.BUILD_NEEDED == 'yes' && env.ORGANIZE_STATUS == 'success' && !cancelled()
         with:
-          tag_name: ${{ env.RELEASE_TAG }}
-          body_path: release.txt
-          files: ${{ env.archive }}
+          tag_name: ${{env.RELEASE_NAME}}
+          release_name: ${{env.RELEASE_NAME}}
+          body: "Built artifacts of ${{env.RELEASE_NAME}} available for download."
+
 
       # failure checking
       - name: "[Failure/Debug] wait for SSH connection (timeout 30min. You are safe to cancel the job now.)"
@@ -253,3 +244,12 @@ jobs:
           env.SKIP_TARGET == '0' && !cancelled()
           && (job.status == 'failure' || (env.OPT_DEBUG == '1'))
         uses: tete1030/safe-debugger-action@dev
+
+  download-artifacts:  # Job 2: Download artifacts
+    runs-on: ubuntu-latest
+    needs: build-and-upload  # Job depends on build-and-upload job completion
+    steps:
+    - uses: actions/download-artifact@v4  # Download artifacts (v4)
+      with:
+        pattern: OpenWrt_firmware_*.tar
+        merge-multiple: true
