--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -225,7 +225,7 @@ jobs:
           env.BUILD_NEEDED == 'yes' && env.ORGANIZE_STATUS == 'success' && !cancelled()
         with:
           name: OpenWrt_firmware_${{env.BUILD_TARGET}}_$(date +'%Y%m%d-%H%M')
-          path: ${{ env.archive }}
+          path: ${{ env.ARTIFACT_PATH }}
 
       - name: Create release
         uses: actions/create-release@v1
@@ -236,7 +236,6 @@ jobs:
           tag_name: ${{env.RELEASE_NAME}}
           release_name: ${{env.RELEASE_NAME}}
           body: "Built artifacts of ${{env.RELEASE_NAME}} available for download."
-
 
       # failure checking
       - name: "[Failure/Debug] wait for SSH connection (timeout 30min. You are safe to cancel the job now.)"
